--- a/fast/requirements.txt
+++ b/fast/requirements.txt
@@ -1,20 +1,93 @@
 anyio==3.6.1
+apyori==1.1.2
+asttokens==2.1.0
+autopep8==1.7.0
+backcall==0.2.0
+bcrypt==4.0.0
+black==22.10.0
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
-fastapi==0.85.0
+cryptography==38.0.1
+cycler==0.11.0
+debugpy==1.6.3
+decorator==5.1.1
+dtreeplt==0.1.43
+entrypoints==0.4
+executing==1.2.0
+fastapi==0.82.0
+fonttools==4.37.1
+graphviz==0.20.1
 greenlet==1.1.3
 h11==0.13.0
-httptools==0.5.0
-idna==3.4
+httptools==0.4.0
+idna==3.3
+ipykernel==6.17.1
+ipython==8.6.0
+ipywidgets==8.0.2
+jedi==0.18.1
+joblib==1.1.0
+jupyter_client==7.4.7
+jupyter_core==5.0.0
+jupyterlab-widgets==3.0.3
+jwt==1.3.1
+kiwisolver==1.4.4
+matplotlib==3.5.3
+matplotlib-inline==0.1.6
+mypy-extensions==0.4.3
 mysql-connector-python==8.0.30
+mysqlclient==2.1.1
+nest-asyncio==1.5.6
+numpy==1.23.2
+packaging==21.3
+pandas==1.4.4
+parso==0.8.3
+passlib==1.7.4
+pathspec==0.10.1
+pickleshare==0.7.5
+Pillow==9.2.0
+platformdirs==2.5.2
+prompt-toolkit==3.0.32
 protobuf==3.20.1
-pydantic==1.10.2
+psutil==5.9.4
+pure-eval==0.2.2
+pycodestyle==2.9.1
+pycparser==2.21
+pydantic==1.10.1
+pydotplus==2.0.2
+Pygments==2.13.0
+PyJWT==2.5.0
+PyMySQL==1.0.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
 python-dotenv==0.21.0
+python-multipart==0.0.5
+pytz==2022.2.1
+pywin32==304
 PyYAML==6.0
+pyzmq==23.2.1
+regex==2022.8.17
+requests==2.28.1
+scikit-learn==1.1.2
+scipy==1.9.1
+seaborn==0.11.2
+six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==1.4.41
-starlette==0.20.4
-typing-extensions==4.3.0
+SQLAlchemy==1.4.40
+stack-data==0.6.1
+starlette==0.19.1
+threadpoolctl==3.1.0
+toml==0.10.2
+tomli==2.0.1
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.3.0
+typing_extensions==4.3.0
+urllib3==1.26.12
 uvicorn==0.18.3
-watchfiles==0.17.0
+watchfiles==0.16.1
+wcwidth==0.2.5
 websockets==10.3
+widgetsnbextension==4.0.3
